# metric-tspmo

./: .envrc  .gitignore  flake.nix  makefile  pyproject.toml  readme.md
.helix/: languages.toml
parser/: __init__.py  clique.py  cnf.py  hampath.py  nqueens.py  problem.py  sudoku.py
script/: charts.py  report.py
solver/: __init__.py  backtracking.py  cdcl.py  dpll.py  schöning.py  sudoku.py
suites/: __init__.py  adapters.py  benchmark.py  conftest.py
suites/problems/clique/: highprob-graph-00.graph  highprob-graph-01.graph  highprob-graph-02.graph  highprob-graph-03.graph  highprob-graph-04.graph  highprob-graph-05.graph  highprob-graph-06.graph  highprob-graph-07.graph  highprob-graph-08.graph  highprob-graph-09.graph  highprob-graph-10.graph  highprob-graph-11.graph  highprob-graph-12.graph  highprob-graph-13.graph  highprob-graph-14.graph  highprob-graph-15.graph  highprob-graph-16.graph  highprob-graph-17.graph  highprob-graph-18.graph  highprob-graph-19.graph  highprob-graph-20.graph  highprob-graph-21.graph  highprob-graph-22.graph  highprob-graph-23.graph  highprob-graph-24.graph  highprob-graph-25.graph  highprob-graph-26.graph  highprob-graph-27.graph  highprob-graph-28.graph  highprob-graph-29.graph  highprob-graph-30.graph  highprob-graph-31.graph  highprob-graph-32.graph  highprob-graph-33.graph  highprob-graph-34.graph  highprob-graph-35.graph  highprob-graph-36.graph  highprob-graph-37.graph  highprob-graph-38.graph  highprob-graph-39.graph  (+260 more)
suites/problems/cnf/: 00tiny.cnf
suites/problems/sudoku/: invalid-unsolvable.sdku  valid-fewer-hints.sdku  (+5 more)
