[project]
name = "tspmo"
version = "0.1.0"
description = "Project 9 - SAT Solvers"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "memray>=1.19.1",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "pytest-memray>=1.8.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "rope>=1.14.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a27",
]
